submitting controller and views

--- a/src/main/resources/static/views/ticket.html
+++ b/src/main/resources/static/views/ticket.html
@@ -1,9 +1,9 @@
 <div class="section">
 	<h3>{{headingTitle}}</h3>
 	<div>
-		<table class="table">
+		<table class="table" ng-repeat="i in tickets">
 			<thead>
-				<tr>
+				<tr class="warning">
 					<th>Musical_Lotto</th>
 					<th>Developed By:</th>
 					<th>krishnabab@gmail.com</th>
