modified code for configuration

--- a/src/main/resources/static/views/ticket.html
+++ b/src/main/resources/static/views/ticket.html
@@ -1,7 +1,7 @@
 <div class="section">
 	<h3>{{headingTitle}}</h3>
 	<div>
-		<table class="table" ng-repeat="i in tickets">
+		<table class="table">
 			<thead>
 				<tr class="warning">
 					<th>Musical_Lotto</th>
