Print colors changed

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -29,7 +29,7 @@ tr.warning th{
     -webkit-print-color-adjust: exact;
 }
 tr.info td{
-	 background-color: #33b5e5 !important;
+	 background-color: #d0ffef !important;
     -webkit-print-color-adjust: exact;
 }
 
